# asar.rs

./: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
src/: error.rs  header.rs  integrity.rs  lib.rs  reader.rs  writer.rs
tests/: basic.rs  edge_cases.rs  integrity.rs  reader.rs  symlink.rs  writer.rs
